<resources>
    <string name="app_name">MemoryTest</string>
    <string name="settings">Settings</string>
    <string name="menu_help">Help!</string>
    <string name="menu_refresh">Refresh</string>

    <string name="title_objective">Objective</string>
    <string name="title_how_to_play">How To Play</string>
    <string name="title_description">Description</string>
    <string name="text_description">This game tests your memory power by asking you to recollect the locations of the images.</string>
    <string name="text_how_to_play">You will be shown a set of images. You have 15 seconds to remember the location of each images.
      After the timeout, the images are flipped and you will be presented a random image. You will have to identify where that image is located in the set and click on the location.
      If it is a match, the image will be revealed.</string>
    <string name="text_objective">The objective of the game is to identify all the images.</string>

    <string name="btn_start">Start Game</string>
    <string name="btn_replay">Replay</string>
    <string name="btn_exit">Exit</string>

    <string name="txt_game_over">Well done!! You have taken %d tries to identify all the images correctly.\n\nYou can now Replay or Exit the game.</string>
    <string name="data_fetch_failed">Failed to fetch data!!</string>
    <string name="connectivity_error">Not connected to Internet!</string>
    <string name="connectivity_required">This game requires internet connectivity to download the images.\nPlease check your connection and try again.</string>
</resources>
